--- a/admin/package.json
+++ b/admin/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "redux-persist": "^6.0.0"
