--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-MONGO_URI=xxxxxxMONGO_URIXXX
+MONGO_URI=mongodb+srv://<_NAME_>:<_Password_>@newcollecation.intvz.mongodb.net/protfolio?retryWrites=true&w=majority&appName=newCollecation
 PORT=5000
 EXPIRES_IN=24h
 JWT_SECRET=xxxxx
